@@ -1,5 +1,3 @@
 DIST kadu-0.6.0.1.tar.bz2 1566609 RMD160 06709d16dd84a10c917fb12ee3dd06eb4ef18879 SHA1 727c5b25b7178f8d947497182da6817c170b7d6a SHA256 5b022f3043b112bbba6115bdf2877ff01d6b3b1342d74db5977fa92b1662d68c
-DIST kadu-0.6.0.tar.bz2 1583937 RMD160 d53830b98b6485924ad3076694b1db78121b1c2b SHA1 ff5cdd0daa9f9de795cbfe15e163b358a9ee55e2 SHA256 f0e31b5ef00c64cad75a43220842b5564b8ec1dfd0c4481f0f3ac8b88fb9e752
 EBUILD kadu-alsa_sound-0.6.0.1.ebuild 269 RMD160 755dda4b7a757a5d08293cd97d2eea6612d626c3 SHA1 bdda1134d72271c381afbe29157f277ef386e92e SHA256 1db31fb298276cbd5b2b2b4f8e9fbff9258eaf5819dc752b1a32c9e14a3d1c10
-EBUILD kadu-alsa_sound-0.6.0.ebuild 269 RMD160 755dda4b7a757a5d08293cd97d2eea6612d626c3 SHA1 bdda1134d72271c381afbe29157f277ef386e92e SHA256 1db31fb298276cbd5b2b2b4f8e9fbff9258eaf5819dc752b1a32c9e14a3d1c10
-MISC ChangeLog 218 RMD160 ac131aaa99c1ecdbe7ca9f6c68bfce6d2a41a96c SHA1 e77684a6108a2412bf9643e48b43b4799c34e014 SHA256 89d6a11821d40e12726dc39dac4d534f30970a25d8e29f6e265d1ab45179ec4e
+MISC ChangeLog 318 RMD160 f7384c26a5016c9d8c1498ec97f2e368e240a565 SHA1 f46eda9fe46ee4b65122acbcf75404e78f8b7359 SHA256 20a6cf5c037e6b932a950e18c7f82d748c2a398b4324793059bd71d85b9e306e
